# finvestor

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
finvestor/: __init__.py  cli.py  logging.yaml  main.py  portfolio.py  schemas.py
finvestor/alpaca/: __init__.py  api.py
finvestor/core/: __init__.py  config.py  log.py  logging.py  logging.yml  retry.py  settings.py  timeframe.py  utils.py
finvestor/data/: __init__.py
finvestor/data/alpaca/: api.py
finvestor/data/yfinance/: __init__.py  bars.py  exceptions.py  scrapper.py  utils.py
finvestor/data_providers/: __init__.py  bars.py  exceptions.py  schemas.py  timeframe.py  utils.py
finvestor/data_providers/alpaca/: auth.py  bars.py  schemas.py  settings.py  utils.py
finvestor/data_providers/yahoo_finance/: __init__.py  assets.py  bars.py  headers.py  portfolio.py  schemas.py  scrapper.py  settings.py  utils.py
finvestor/db/: base.py  init_db.py  session.py
finvestor/etoro/: cli.py  io.py  parsers.py  portfolio.py  schemas.py  utils.py  yf_mapping.py
finvestor/models/: __init__.py  bar.py
finvestor/schemas/: asset.py  bar.py  base.py  transaction.py
finvestor/technical_analysis/: __init__.py
finvestor/utils/: duration.py  logger.py
finvestor/yahoo_finance/: __init__.py  bars.py  cli.py  portfolio.py  scrapper.py  settings.py  utils.py
finvestor/yahoo_finance/api/: __init__.py  bars.py  scrapper.py  utils.py
finvestor/yfinance/: api.py  settings.py  utils.py
tests/: conftest.py
tests/__cassettes__/: data-yfinance-tsla-html-response.yaml  data-yfinance-tsla-isin-response.yaml  test_get_alpaca_bars[ADAUSD-crypto-2021-11-26T15-00-00].yaml  test_get_alpaca_bars[BTCUSD-crypto-2021-11-26T15-00-00].yaml  test_get_alpaca_bars[TSLA-stock-2021-11-26T15-00-00-limit-2].yaml  test_get_alpaca_bars[TSLA-stock-2021-11-26T15-00-00].yaml  test_get_alpaca_bars[TSLA-stock-2021-11-28T15-00-00].yaml
tests/__data__/: ISIN_scrape_response.txt  fake-etoro-account-statement.xlsx  yf_scrape_response.html
tests/alpaca/: conftest.py  test_api.py
tests/core/: test_retry.py
tests/data/yfinance/: test_bars.py  test_scrapper.py  test_utils.py
tests/data/yfinance/__snapshots__/: test_scrapper.ambr
tests/data_providers/: conftest.py  test_schemas.py  test_timeframe.py  test_utils.py
tests/data_providers/alpaca/: test_auth.py  test_bars.py
tests/data_providers/alpaca/__snapshots__/: test_bars.ambr
tests/etoro/: conftest.py  test_etoro_utils.py  test_io.py  test_parsers.py
tests/etoro/__snapshots__/: test_io.ambr  test_parsers.ambr
tests/yfinance/: conftest.py  test_settings.py  test_yf_api.py  test_yf_utils.py
tests/yfinance/__snapshots__/: parsed_quote_summary.ambr  test_settings.ambr
