[tool.poetry]
name = "finvestor"
version = "0.1.0"
description = "Code for tracking and making sense of your different investement platforms."
authors = ["Ouail Bendidi <ouail.bendidi@gmail.com>"]
license = "MIT"
packages = [
    {include = "finvestor"}
]

[tool.poetry.scripts]
finvestor = "finvestor.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.1"
httpx-cache = "^0.4.0"
rich = "^10.16.2"
pydantic = "^1.9.0"
numpy = "^1.22.0"
pandas = "^1.3.5"
tenacity = "^8.0.1"
typer = "^0.4.0"


[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
mypy = "^0.930"
isort = "^5.9.3"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
types-PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core>=1.10.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.8
plugins = "pydantic.mypy,sqlalchemy.ext.mypy.plugin"
exclude = "tests/"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["finvestor"]

[tool.pytest.ini_options]
addopts = "-ra -q -x -vv --cov=finvestor --cov-report=term --cov-report=xml"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["**/tests/test_*.py"]
